--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -16,6 +16,11 @@ body {
     padding: 20px;
 }
 
+#intro-text {
+    font-size: 3rem;
+    margin-bottom: 3rem;
+}
+
 h1 {
     text-align: center;
     margin-bottom: 40px;
